--- a/Sprint 1/style.css
+++ b/Sprint 1/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong|Raleway|Roboto Mono|Pacifico|Shadows Into Light");
 body {
     font-family: "raleway";
-    background-color: #031c41;
+    background-color: #124157;
     color: aliceblue;
     margin-top: 100px;
     margin-left: 50px;
