--- a/Sprint 1/style.css
+++ b/Sprint 1/style.css
@@ -37,8 +37,8 @@ h2 {
 .infinity {
     font-family: "Shadows Into Light";
     font-size: 300px;
-    color: rgb(122, 191, 236);
-    text-shadow: 0 0 5px rgb(122, 191, 236);
+    color: #278bb9;
+    text-shadow: 0 0 5px #278bb9;
 }
 
 div {
