--- a/Sprint/Sprint 3/style.css
+++ b/Sprint/Sprint 3/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700|Palette Mosaic");
  :root {
-    --container-color: #e62604;
-    --item-color: #ddcdff;
+    --container-color: #e6260400;
+    --item-color: #ddcdff00;
 }
 
 html,
@@ -12,19 +12,67 @@ body {
     padding: 0;
 }
 
+
+/* verschiedene Schriftgrössen und Farben */
+
 p {
     font-family: "Palette Mosaic";
     margin: 0;
 }
 
+.main-oh {
+    font-family: "Palette Mosaic";
+    font-size: 2vw;
+}
+
+.size2-oh {
+    font-family: "Palette Mosaic";
+    font-size: 1vw;
+    color: white;
+}
+
 h1 {
     font-size: 200px;
-    text-align: center;
+}
+
+.white {
     color: white;
+}
+
+.font-90 {
+    font-size: 90px;
+}
+
+.font-54 {
+    font-size: 54px;
+}
+
+.font-40 {
+    font-size: 40px;
+}
+
+.font-36 {
+    font-size: 36px;
+}
+
+.font-18 {
+    font-size: 18px;
+}
+
+.font-9 {
+    font-size: 9px;
+}
+
+.font-12 {
+    font-size: 12px;
 }
 
 .textcolor {
     color: darksalmon;
+}
+
+.textcolor:hover {
+    color: rgb(240, 56, 56);
 }
 
 .thin {
@@ -39,6 +87,11 @@ table {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.roboto a {
+    color: white;
+    text-decoration: none;
+}
+
 .Legende {
     font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
@@ -47,24 +100,10 @@ table {
     color: white;
 }
 
-.navigation {
-    font-style: normal;
-    font-weight: 1000;
-    text-align: right;
-    color: white;
-    margin: 2%;
-    font-size: px;
-}
+.astronaut {}
 
-.container.info {
-    position: fixed;
-    color: white;
-    margin: 2%;
-}
 
-.item-legende {
-    writing-mode: vertical-lr;
-}
+/* Container und so */
 
 .container {
     display: flex;
@@ -96,7 +135,43 @@ table {
     align-items: stretch;
 }
 
+.item.oh {
+    color: black;
+    width: 100%;
+    text-align: left;
+}
+
 .oh-container {
+    width: 100%;
+    align-items: stretch;
+}
+
+.oh-container2 {
+    width: 50%;
+    align-items: stretch;
+    color: white;
+}
+
+.navigation {
+    font-style: normal;
+    font-weight: 1000;
+    text-align: right;
+    color: white;
+    margin: 2.5%;
+    font-size: 1.5em;
+}
+
+.container.info {
+    position: fixed;
+    color: white;
+    margin: 2%;
+}
+
+.item-legende {
+    writing-mode: vertical-lr;
+}
+
+.oh-container3 {
     width: 100%;
     align-items: stretch;
 }
@@ -105,6 +180,33 @@ table {
     padding: 20px;
     justify-content: space-evenly;
     align-items: stretch;
+}
+
+.infinitiy {
+    text-align: center;
+}
+
+.flex-row span {
+    writing-mode: vertical-lr;
+}
+
+.flex-col {
+    flex-direction: column;
+    display: flex;
+    width: 60vw;
+    color: black;
+}
+
+.flex-col span,
+.flex-row span {
+    white-space: nowrap;
+}
+
+
+/* Animationen */
+
+.white:hover {
+    opacity: 0%;
 }
 
 .oh-container p {
@@ -121,7 +223,64 @@ table {
         transform: scale(1);
     }
     to {
-        transform: scale(4);
+        transform: scale(3.5);
+    }
+}
+
+.oh-container2 p {
+    animation-name: oh-grid2;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes oh-grid2 {
+    from {
+        opacity: 100%;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0%;
+        transform: scale(3.5);
+    }
+}
+
+.oh-container3 p {
+    animation-name: oh-grid3;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes oh-grid3 {
+    from {
+        transform: scale(.5);
+        color: white;
+    }
+    to {
+        transform: scale(2);
+        color: black;
+    }
+}
+
+.astronaut {
+    animation-duration: 7s;
+    animation-name: move;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes move {
+    from {
+        margin-left: 10%;
+    }
+    to {
+        margin-left: 80%;
     }
 }
 
@@ -131,4 +290,32 @@ table {
 
 .vertical {
     writing-mode: vertical-lr;
+}
+
+
+/* Play Musik */
+
+.btn {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    border-width: 0;
+    outline: none;
+    color: none;
+    transition: background-color .3s;
+    margin-bottom: 0.5rem;
+}
+
+.btn.playstate {
+    background-color: #ecf0f1;
+    color: rgba(10, 4, 12, 0.85);
+}
+
+
+/* Responsive */
+
+@media screen and (max-width:960px) {
+    .container.main {
+        flex-wrap: wrap;
+    }
 }
