--- a/style.css
+++ b/style.css
@@ -1,64 +1,327 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700|Palette Mosaic");
  :root {
-    --container-color: #ddcdff00;
+    --container-color: #e6260400;
     --item-color: #ddcdff00;
 }
 
 html,
 body {
-    background-color: #363636;
+    background-color: #272727;
     color: black;
-    margin: 20px;
+    margin: 0;
     padding: 0;
 }
 
-h1 {
-    font-family: "Palette Mosaic";
-    color: black;
-    font-size: 80px;
-}
+
+/* verschiedene Schriftgrössen und Farben */
 
 p {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
+    font-family: "Palette Mosaic";
     margin: 0;
 }
 
-a {
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 800;
-    color: black;
-    text-decoration: none;
+.main-oh {
+    font-family: "Palette Mosaic";
+    font-size: 2vw;
 }
 
-.headline2 {
-    font-size: 30px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
-    font-weight: 800;
-    color: black;
-    text-decoration: none;
+.size2-oh {
+    font-family: "Palette Mosaic";
+    font-size: 1vw;
+    color: white;
 }
 
-.container {
-    height: 150px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    flex-wrap: wrap;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.box {
-    width: 20%;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-.box-black {
-    color: black;
+h1 {
+    font-size: 200px;
 }
 
 .white {
     color: white;
+}
+
+.font-90 {
+    font-size: 90px;
+}
+
+.font-54 {
+    font-size: 54px;
+}
+
+.font-40 {
+    font-size: 40px;
+}
+
+.font-36 {
+    font-size: 36px;
+}
+
+.font-18 {
+    font-size: 18px;
+}
+
+.font-9 {
+    font-size: 9px;
+}
+
+.font-12 {
+    font-size: 12px;
+}
+
+.textcolor {
+    color: darksalmon;
+}
+
+.textcolor:hover {
+    color: rgb(240, 56, 56);
+}
+
+.thin {
+    font-weight: 300;
+}
+
+table {
+    font-family: "Palette Mosaic";
+}
+
+.roboto {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.roboto a {
+    color: white;
+    text-decoration: none;
+}
+
+.Legende {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    text-align: right;
+    color: white;
+}
+
+.astronaut {}
+
+
+/* Container und so */
+
+.container {
+    display: flex;
+    background-color: var(--container-color);
+}
+
+.main {
+    height: calc(80vh - 100px);
+    width: calc(100vw - 100px);
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.right {
+    height: calc(80vh - 100px);
+    width: calc(100vw - 100px);
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.item {
+    background-color: var(--item-color);
+    margin: 5px;
+    width: 20%;
+    font-family: Palette Mosaic;
+    text-align: center;
+    align-items: stretch;
+}
+
+.item.oh {
+    color: black;
+    width: 100%;
+    text-align: left;
+}
+
+.oh-container {
+    width: 100%;
+    align-items: stretch;
+}
+
+.oh-container2 {
+    width: 50%;
+    align-items: stretch;
+    color: white;
+}
+
+.navigation {
+    font-style: normal;
+    font-weight: 1000;
+    text-align: right;
+    color: white;
+    margin: 2.5%;
+    font-size: 1.5em;
+}
+
+.container.info {
+    position: fixed;
+    color: white;
+    margin: 2%;
+}
+
+.item-legende {
+    writing-mode: vertical-lr;
+}
+
+.oh-container3 {
+    width: 100%;
+    align-items: stretch;
+}
+
+.container.row {
+    padding: 20px;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.infinitiy {
+    text-align: center;
+}
+
+.flex-row {
+    flex-direction: row;
+    display: flex;
+    width: 50vw;
+}
+
+.flex-row span {
+    writing-mode: vertical-lr;
+}
+
+.flex-col {
+    flex-direction: column;
+    display: flex;
+    width: 60vw;
+    color: black;
+}
+
+.flex-col span,
+.flex-row span {
+    white-space: nowrap;
+}
+
+
+/* Animationen */
+
+.white:hover {
+    opacity: 0%;
+}
+
+.oh-container p {
+    animation-name: oh-grid;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes oh-grid {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(3.5);
+    }
+}
+
+.oh-container2 p {
+    animation-name: oh-grid2;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes oh-grid2 {
+    from {
+        opacity: 100%;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0%;
+        transform: scale(3.5);
+    }
+}
+
+.oh-container3 p {
+    animation-name: oh-grid3;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes oh-grid3 {
+    from {
+        transform: scale(.5);
+        color: white;
+    }
+    to {
+        transform: scale(2);
+        color: black;
+    }
+}
+
+.astronaut {
+    animation-duration: 7s;
+    animation-name: move;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes move {
+    from {
+        margin-left: 10%;
+    }
+    to {
+        margin-left: 80%;
+    }
+}
+
+.horizontal {
+    writing-mode: horizontal-tb;
+}
+
+.vertical {
+    writing-mode: vertical-lr;
+}
+
+
+/* Play Musik */
+
+.btn {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    border-width: 0;
+    outline: none;
+    color: none;
+    transition: background-color .3s;
+    margin-bottom: 0.5rem;
+}
+
+.btn.playstate {
+    background-color: #ecf0f1;
+    color: rgba(10, 4, 12, 0.85);
+}
+
+
+/* Responsive */
+
+@media screen and (max-width:960px) {
+    .container.main {
+        flex-wrap: wrap;
+    }
 }
