--- a/Prozess/style.css
+++ b/Prozess/style.css
@@ -69,3 +69,10 @@ a:hover {
 a.white:hover {
     color: darksalmon;
 }
+
+.back {
+    font-size: 1.5em;
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+}
